# config

cpp/template/: .gitignore  CMakeLists.txt
nvim/: init.vim
